--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,19 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="please_add_doctors">Please add Doctors</string>
+    <string name="call">Call</string>
+    <string name="phoneNumber">Phone Number</string>
+    <string name="email">Email</string>
+    <string name="address">Address</string>
+    <string name="authentication_failed">"Authentication failed."</string>
+    <string name="name">Name</string>
+    <string name="fever">Fever</string>
+    <string name="whatsapp">WhatsApp</string>
+    <string name="sms">SMS</string>
+    <string name="add_medication">Add Medication</string>
+    <string name="sign_in_google">Sign in via Google</string>
+    <string name="sign_out">Sign Out</string>
     <string name="title_activity_add_medications">Add Medications</string>
     <string name="add_a_doctor">Add a doctor</string>
     <string name="add_prescriptions">Add prescriptions</string>
@@ -15,4 +28,7 @@
     <string name="problem">Problem for which you are taking Medication</string>
     <string name="title_activity_add_doctor">Add Doctor</string>
     <string name="title_activity_detail">Detail</string>
+    <string name="camera">Camera</string>
+    <string name="file">File</string>
+    <string name="save">Save</string>
 </resources>
